--- a/shop/package.json
+++ b/shop/package.json
@@ -30,6 +30,8 @@
     "chart.js": "^2.9.4",
     "lodash": "^4.17.21",
     "ng2-charts": "^2.4.3",
+    "primeicons": "^5.0.0",
+    "primeng": "^11.4.2",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.1",
     "zone.js": "~0.10.2"
@@ -52,6 +54,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.8"
+    "typescript": "4.0.8",
+    "primeflex": "2.0.0",
+    "primeicons": "5.0.0",
+    "quill": "^1.3.7"
   }
 }
