--- a/shop/package.json
+++ b/shop/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "lodash": "^4.17.21",
+    "material-icons": "^1.11.1",
     "ng2-charts": "^2.4.3",
     "primeicons": "^5.0.0",
     "primeng": "^11.4.2",
@@ -51,12 +52,12 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "4.0.8",
     "primeflex": "2.0.0",
     "primeicons": "5.0.0",
-    "quill": "^1.3.7"
+    "protractor": "~7.0.0",
+    "quill": "^1.3.7",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "4.0.8"
   }
 }
